Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

 11th July 2010 - FreeRapid Downloader 0.85 Alfa 1
  Added : New action in Remove menu: "Remove Completed Links and Deleted Files"
  Added : New user option: "Slim lines in History dialog"
  Added : New user options for speed limiter
  Added : New download state SKIPPED, which is used for files that already exist and were skipped by the user
  Added : Menu item for refreshing proxy list
  Added : New setting for handling plugin updates: "Update and restart automatically if no downloads in progress"
  Added : Improved smart clipboard monitoring detection for URLs like
            http://web.com/vb/redirector.php?url=http%3A%2F%2Frapidshare.com%2Ffiles%2F142676%2la.rar&a45456=asdsd
  Added : plugin API version 0.85
            - support for priorities of each plugin
            - experimental support for RTMP protocol
  Added : max downloads option per plugin              
  Added : Experimental support for downloading basic RTMP streams.
            This was made possible by Flazr v0.6, which we took and modified slightly to fit our needs.
            Big thanks to the developers of Flazr! Home page: http://www.flazr.com/
  Changed : Faster matching of URLs against plugins
  Changed : Less required restarts after plugin updates
  Fixed : Problem with downloading txt files + using description, see http://wordrider.net/forum/read.php?7,4681,4696
  Fixed : Inconsistent behavior of "Close to tray" option

 29th October 2009 - FreeRapid Downloader 0.83 Update 1
  Added : Romanian language [thanks to de-a dura lex]
  Added : Experimental: new -DtableSortable boolean internal property to enable sorting in the main table
          (default value is false, only for testers, see documentation how to use internal properties) 